initial with jekyll

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       <li>
         <a href="https://www.github.com/zachweed">github</a>
       </li>
+      <li>
+        <a href="docs/docker_kubernetes_vmware.html"
+      </li>
     </ol>
   </body>
 </html>
